  for many-to-one relationships to polymorphic unions that did not contain the 
  base table [ticket:439].  the lazy/eager clause adaption to the selectable
  will match up on straight column names (i.e. its a more liberal policy)
  - eager relation to an inheriting mapper wont fail if no rows returned for
  the relationship.
- oracle:
  - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER OVER,
  oracle dialect checks the selectable its being applied to and will switch to 
  table PK if not applicable, i.e. for a UNION.  checking for DISTINCT, GROUP BY
  (other places that rowid is invalid) still a TODO.  allows polymorphic mappings
  to function, [ticket:436]
- mysql:
  - fix to reflection on older DB's that might return array() type for 
  "show variables like" statements

0.3.4
- general:
  - global "insure"->"ensure" change. in US english "insure" is actually
    largely interchangeable with "ensure" (so says the dictionary), so I'm not
    completely illiterate, but its definitely sub-optimal to "ensure" which is
    non-ambiguous.
- sql:
  - added "fetchmany()" support to ResultProxy
  - added support for column "key" attribute to be useable in
    row[<key>]/row.<key>
  - changed "BooleanExpression" to subclass from "BinaryExpression", so that
    boolean expressions can also follow column-clause behaviors (i.e. label(),
    etc).
  - trailing underscores are trimmed from func.<xxx> calls, such as func.if_()
  - fix to correlation of subqueries when the column list of the select
    statement is constructed with individual calls to append_column(); this
    fixes an ORM bug whereby nested select statements were not getting
    correlated with the main select generated by the Query object.
  - another fix to subquery correlation so that a subquery which has only one
    FROM element will *not* correlate that single element, since at least one
    FROM element is required in a query.