@@ -6,6 +6,7 @@
   will match up on straight column names (i.e. its a more liberal policy)
   - eager relation to an inheriting mapper wont fail if no rows returned for
   the relationship.
+  - fix for multi-level polymorphic mappers
 - oracle:
   - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER OVER,
   oracle dialect checks the selectable its being applied to and will switch to 
